--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "loguru>=0.7.3",
     "multidict>=6.2.0",
     "numpy>=2.0.2",
-    "openai>=1.76.2",
+    "openai[realtime]>=1.76.2",
     "opencv-python>=4.12.0.88",
     "opentelemetry-api>=1.30.0",
     "opentelemetry-exporter-otlp>=1.15.0",
